# BA-Ginkgo_vs_Dune

./: .gitignore  LICENSE  README.md  dune_installer.sh
dependencies/: dune_installer.sh  ginkgo_installer.sh  ginkgo_rebuild.sh
dependencies/DUNE/: buildmodules.sh  release.opts
dependencies/DUNE/dune-evaluation/: CMakeLists.txt  config.h.cmake  dune-evaluation.pc.in  dune.module
dependencies/DUNE/dune-evaluation/src/: CMakeLists.txt  dune-evaluation.cc  mpi_example_deletable.cc
dependencies/DUNE/release-build/dune-common/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  dune-common-config-version.cmake  dune-common-config.cmake  dune-common-targets.cmake  dune-common.pc  run-in-dune-env  src_dir
dependencies/DUNE/release-build/dune-istl/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  activate  cmake_install.cmake  config.h  config_collected.h.cmake  dune-istl-config-version.cmake  dune-istl-config.cmake  (+3 more)
resources/: dune-evaluation.cc  time_experiment.hh
resources/buildscripts_ginkgo/: build.sh  rebuild.sh
src/: CMakeLists.txt  dune  generate-results.sh  screenlog.0
src/DUNE/: release.opts
src/ginkgo/: CMakeLists.txt  ginkgo-evaluation.cc  ginkgo_results.txt  gko-evaluate-solvers.cc  rebuild.sh
src/ginkgo/tests/: CMakeLists.txt  ginkgo-testing.cc  rebuild.sh
src/results/: results_ISTL.txt  results_ginkgo_reference_csr.txt
src/sys_info/: a.out  sys_info.cc
src/sys_info/STREAM/: a.out  generate_STREAM_results.sh  sorted_output.txt  sorting.sh  stream-test  stream.c
(+552 files in other folders)
